--- a/lineage_panel/index.html
+++ b/lineage_panel/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <div id="container"></div>
-    <script type="module" src="__ROOT__/assets/g6.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/antv-g6/4.8.8/g6.min.js"></script>
     <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
   </body>
 </html>
