--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -35,6 +35,7 @@
     <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/style.css" />
   </head>
   <body id="app">
+    <img v-show="isLoading" id="spinner" src="__ROOT__/assets/spinner.gif" />
     <section id="docs-form">
       <vscode-text-area
         v-model="modelDocumentation"
