--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -36,79 +36,87 @@
     <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/codicon.css" />
   </head>
   <body id="app">
-    <img v-show="isLoading" id="spinner" src="__ROOT__/assets/spinner.gif" />
-    <section id="docs-form">
-      <vscode-text-area
-        v-model="modelDocumentation"
-        placeholder="Describe your model"
-        resize="vertical"
-        rows="5"
-        ><h2>Documentation for {{ modelName }}</h2></vscode-text-area
-      >
-      <div class="column-actions">
-        <vscode-button @click="generateDocsForModel()"
-          >Generate documentation<span
-            slot="start"
-            class="codicon codicon-wand"
-          ></span
-        ></vscode-button>
-      </div>
-      <vscode-divider></vscode-divider>
-      <h2>Columns</h2>
-      <vscode-button @click="fetchMetadataFromDatabase()"
-        >Synchronize columns with database<span
-          slot="start"
-          class="codicon codicon-sync"
-        ></span>
-      </vscode-button>
-      <section id="columns-form" v-for="column in columns">
+    <div v-if="hasData">
+      <img v-show="isLoading" id="spinner" src="__ROOT__/assets/spinner.gif" />
+      <section id="docs-form">
         <vscode-text-area
-          v-model="column.description"
-          :placeholder="'Describe ' + column.name"
+          v-model="modelDocumentation"
+          placeholder="Describe your model"
           resize="vertical"
           rows="5"
-          ><h3>
-            {{ column.name }}<span v-if="column.type"
-              >&nbsp;({{ column.type }})</span
-            >&nbsp;<vscode-tag v-show="column.generated"
-              >AI generated</vscode-tag
-            >
-          </h3></vscode-text-area
         >
+          <h2>Documentation for {{ modelName }}</h2>
+        </vscode-text-area>
         <div class="column-actions">
-          <vscode-button @click="generateDocsForColumn(column.name)"
+          <vscode-button @click="generateDocsForModel()"
             >Generate documentation<span
               slot="start"
               class="codicon codicon-wand"
-            ></span>
-          </vscode-button>
-          <vscode-button appearance="secondary" v-show="column.generated">
-            <span slot="start" class="codicon codicon-thumbsup"></span>
-          </vscode-button>
-          <vscode-button appearance="secondary" v-show="column.generated">
-            <span slot="start" class="codicon codicon-thumbsdown"></span>
-          </vscode-button>
-          <vscode-button
-            appearance="secondary"
-            v-show="column.generated"
-            @click="showRating(column.name)"
-            >Add comment
-            <span slot="start" class="codicon codicon-comment"></span>
-          </vscode-button>
+            ></span
+          ></vscode-button>
         </div>
-
-        <div class="rating" :ref="'rating_' + column.name">
+        <vscode-divider></vscode-divider>
+        <h2>Columns</h2>
+        <vscode-button @click="fetchMetadataFromDatabase()"
+          >Synchronize columns with database<span
+            slot="start"
+            class="codicon codicon-sync"
+          ></span>
+        </vscode-button>
+        <section id="columns-form" v-for="column in columns">
           <vscode-text-area
-            :placeholder="'Tell us what you think about the AI generated documentation for ' + column.name"
+            v-model="column.description"
+            :placeholder="'Describe ' + column.name"
             resize="vertical"
             rows="5"
-            ><h3>Rate the generated documentation</h3></vscode-text-area
           >
-          <vscode-button id="submit-button">Comment</vscode-button>
-        </div>
+            <h3>
+              {{ column.name }}<span v-if="column.type"
+                >&nbsp;({{ column.type }})</span
+              >&nbsp;<vscode-tag v-show="column.generated"
+                >AI generated</vscode-tag
+              >
+            </h3>
+          </vscode-text-area>
+          <div class="column-actions">
+            <vscode-button @click="generateDocsForColumn(column.name)"
+              >Generate documentation<span
+                slot="start"
+                class="codicon codicon-wand"
+              ></span>
+            </vscode-button>
+            <vscode-button appearance="secondary" v-show="column.generated">
+              <span slot="start" class="codicon codicon-thumbsup"></span>
+            </vscode-button>
+            <vscode-button appearance="secondary" v-show="column.generated">
+              <span slot="start" class="codicon codicon-thumbsdown"></span>
+            </vscode-button>
+            <vscode-button
+              appearance="secondary"
+              v-show="column.generated"
+              @click="showRating(column.name)"
+              >Add comment
+              <span slot="start" class="codicon codicon-comment"></span>
+            </vscode-button>
+          </div>
+
+          <div class="rating" :ref="'rating_' + column.name">
+            <vscode-text-area
+              :placeholder="'Tell us what you think about the AI generated documentation for ' + column.name"
+              resize="vertical"
+              rows="5"
+            >
+              <h3>Rate the generated documentation</h3>
+            </vscode-text-area>
+            <vscode-button id="submit-button">Comment</vscode-button>
+          </div>
+        </section>
+        <vscode-button id="submit-button">Save</vscode-button>
       </section>
-      <vscode-button id="submit-button">Save</vscode-button>
-    </section>
+    </div>
+    <div v-else="hasData">
+      <h2>Select a model file to show documentation editor</h2>
+    </div>
     <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
   </body>
 </html>
