change props to avoid conflict. working feedback submission with full_form populating (also needs backend change)

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -101,7 +101,11 @@
               <span slot="start" class="codicon codicon-comment"></span>
             </vscode-button>
           </div>
-          <Comment :data="column" :ref="'rating_' + column.name" />
+          <Comment
+            :pdata="column"
+            :modelname="name"
+            :ref="'rating_' + column.name"
+          />
         </section>
         <vscode-button id="submit-button">Save</vscode-button>
       </section>
