dont need the rename of data to colData (+1 squashed commit) Squashed commits: [b294969] send additional keys for feedback

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -101,11 +101,7 @@
               <span slot="start" class="codicon codicon-comment"></span>
             </vscode-button>
           </div>
-          <Comment
-            :pdata="column"
-            :modelname="name"
-            :ref="'rating_' + column.name"
-          />
+          <Comment :data="column" :ref="'rating_' + column.name" />
         </section>
         <vscode-button id="submit-button">Save</vscode-button>
       </section>
