--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -1,93 +1,136 @@
 <!doctype html>
 <html lang="en">
-<!-- These are injected at HTML render time
+  <!-- These are injected at HTML render time
     __ROOT__            [path to resource directory]
     __THEME__           ["light" | "dark"]
     __NONCE__           [security]
     __CSPSOURCE__       [webview Content Secure Policy source]
  -->
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; font-src __CSPSOURCE__; img-src __CSPSOURCE__ https:; style-src __CSPSOURCE__ 'unsafe-inline'; script-src 'strict-dynamic' 'unsafe-eval' 'nonce-__NONCE__';" />
-  <title>Documentation Editor</title>
-  <!-- These are made available for main.js -->
-  <script nonce="__NONCE__" type="importmap">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; font-src __CSPSOURCE__; img-src __CSPSOURCE__ https:; style-src __CSPSOURCE__ 'unsafe-inline'; script-src 'strict-dynamic' 'unsafe-eval' 'nonce-__NONCE__';"
+    />
+    <title>Documentation Editor</title>
+    <!-- These are made available for main.js -->
+    <script nonce="__NONCE__" type="importmap">
       {
         "imports": {
           "vue": "__ROOT__/assets/vue.esm-browser.prod.js"
         }
       }
     </script>
-  <script nonce="__NONCE__" type="module" src="__ROOT__/assets/toolkit.min.js"></script>
-  <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/style.css" />
-  <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/codicon.css" />
-</head>
+    <script
+      nonce="__NONCE__"
+      type="module"
+      src="__ROOT__/assets/toolkit.min.js"
+    ></script>
+    <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/style.css" />
+    <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/codicon.css" />
+  </head>
 
-<body id="app">
-  <div v-if="hasData">
-    <img v-show="isLoading" id="spinner" src="__ROOT__/assets/spinner.gif" />
-    <section id="docs-form">
-      <vscode-text-area v-model="description" placeholder="Describe your model" resize="vertical" rows="5">
-        <h2>Documentation for {{ name }}</h2>
-        &nbsp;<vscode-tag v-show="generated && aiEnabled">AI generated</vscode-tag>
-      </vscode-text-area>
-      <div v-if="aiEnabled" class="column-actions">
-        <vscode-button @click="generateDocsForModel()">Generate documentation<span slot="start"
-            class="codicon codicon-wand"></span></vscode-button>
-        <vscode-button appearance="secondary" v-show="generated" @click="toggleRating('model_rating')">Add comment
-          <span slot="start" class="codicon codicon-comment"></span>
-        </vscode-button>
-      </div>
-      <Comment :data="description" :ref="model_rating"></Comment>
-      <vscode-divider></vscode-divider>
-      <h2>Columns</h2>
-      <vscode-button @click="fetchMetadataFromDatabase()">Synchronize columns with database<span slot="start"
-          class="codicon codicon-sync"></span>
-      </vscode-button>
-      <section id="columns-form" v-for="column in columns">
-        <vscode-text-area v-model="column.description" :placeholder="'Describe ' + column.name" resize="vertical"
-          rows="5">
-          <h3>
-            {{ column.name }}<span v-if="column.type">&nbsp;({{ column.type }})</span>&nbsp;<vscode-tag
-              v-show="column.generated && aiEnabled">AI generated</vscode-tag>
-          </h3>
+  <body id="app">
+    <div v-if="hasData">
+      <img v-show="isLoading" id="spinner" src="__ROOT__/assets/spinner.gif" />
+      <section id="docs-form">
+        <vscode-text-area
+          v-model="description"
+          placeholder="Describe your model"
+          resize="vertical"
+          rows="5"
+        >
+          <h2>Documentation for {{ name }}</h2>
+          &nbsp;<vscode-tag v-show="generated && aiEnabled"
+            >AI generated</vscode-tag
+          >
         </vscode-text-area>
         <div v-if="aiEnabled" class="column-actions">
-          <vscode-button @click="generateDocsForColumn(column.name)">Generate documentation<span slot="start"
-              class="codicon codicon-wand"></span>
-          </vscode-button>
-          <vscode-button appearance="secondary" v-show="column.generated"
-            @click="toggleRating('rating_' + column.name)">Add comment
+          <vscode-button @click="generateDocsForModel()"
+            >Generate documentation<span
+              slot="start"
+              class="codicon codicon-wand"
+            ></span
+          ></vscode-button>
+          <vscode-button
+            appearance="secondary"
+            v-show="generated"
+            @click="toggleRating('model_rating')"
+            >Add comment
             <span slot="start" class="codicon codicon-comment"></span>
           </vscode-button>
         </div>
-        <Comment :data="column" :ref="'rating_' + column.name" />
+        <Comment :data="description" :ref="'model_rating'"></Comment>
+        <vscode-divider></vscode-divider>
+        <h2>Columns</h2>
+        <vscode-button @click="fetchMetadataFromDatabase()"
+          >Synchronize columns with database<span
+            slot="start"
+            class="codicon codicon-sync"
+          ></span>
+        </vscode-button>
+        <section id="columns-form" v-for="column in columns">
+          <vscode-text-area
+            v-model="column.description"
+            :placeholder="'Describe ' + column.name"
+            resize="vertical"
+            rows="5"
+          >
+            <h3>
+              {{ column.name }}<span v-if="column.type"
+                >&nbsp;({{ column.type }})</span
+              >&nbsp;<vscode-tag v-show="column.generated && aiEnabled"
+                >AI generated</vscode-tag
+              >
+            </h3>
+          </vscode-text-area>
+          <div v-if="aiEnabled" class="column-actions">
+            <vscode-button @click="generateDocsForColumn(column.name)"
+              >Generate documentation<span
+                slot="start"
+                class="codicon codicon-wand"
+              ></span>
+            </vscode-button>
+            <vscode-button
+              appearance="secondary"
+              v-show="column.generated"
+              @click="toggleRating('rating_' + column.name)"
+              >Add comment
+              <span slot="start" class="codicon codicon-comment"></span>
+            </vscode-button>
+          </div>
+          <Comment :data="column" :ref="'rating_' + column.name"></Comment>
+        </section>
+        <vscode-radio-group disabled v-if="patchPath === undefined">
+          <label slot="label">Store documentation</label>
+          <vscode-radio>In existing yaml file</vscode-radio>
+          <vscode-radio>New yaml file</vscode-radio>
+        </vscode-radio-group>
+        <div
+          class="dropdown-container"
+          v-if="patchPath === undefined && patchPaths.length > 0"
+        >
+          <label for="patch-path-selector">Choose an existing yaml file:</label>
+          <vscode-dropdown id="patch-path-selector">
+            <vscode-option v-for="patchPath in patchPaths"
+              >{{ patchPath }}</vscode-option
+            >
+          </vscode-dropdown>
+        </div>
+        <vscode-text-field v-model="patchPath" readonly="!!patchpath">
+          <h3>Documentation yaml path</h3>
+          <span slot="start" class="codicon codicon-file"></span>
+        </vscode-text-field>
+        <vscode-button id="submit-button" @click="saveDocumentation()"
+          >Save</vscode-button
+        >
       </section>
-      <vscode-radio-group disabled v-if="patchPath === undefined">
-        <label slot="label">Store documentation</label>
-        <vscode-radio>In existing yaml file</vscode-radio>
-        <vscode-radio>New yaml file</vscode-radio>
-      </vscode-radio-group>
-      <div class="dropdown-container" v-if="patchPath === undefined && patchPaths.length > 0">
-        <label for="patch-path-selector">Choose an existing yaml file:</label>
-        <vscode-dropdown id="patch-path-selector">
-          <vscode-option v-for="patchPath in patchPaths">{{ patchPath }}</vscode-option>
-        </vscode-dropdown>
-      </div>
-      <vscode-text-field v-model="patchPath" readonly="!!patchpath">
-        <h3>Documentation yaml path</h3>
-        <span slot="start" class="codicon codicon-file"></span>
-      </vscode-text-field>
-      <vscode-button id="submit-button" @click="saveDocumentation()">Save</vscode-button>
-    </section>
-  </div>
-  <div v-else="hasData">
-    <h2>Select a model file to show documentation editor</h2>
-  </div>
-  <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
-</body>
-
+    </div>
+    <div v-else="hasData">
+      <h2>Select a model file to show documentation editor</h2>
+    </div>
+    <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
+  </body>
 </html>
