--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -42,10 +42,12 @@
           resize="vertical"
           rows="5"
         >
-          <h2>Documentation for {{ name }}</h2>
-          &nbsp;<vscode-tag v-show="generated && aiEnabled"
-            >AI generated</vscode-tag
-          >
+          <h2>
+            Documentation for {{ name }} &nbsp;<vscode-tag
+              v-show="generated && aiEnabled"
+              >AI generated</vscode-tag
+            >
+          </h2>
         </vscode-text-area>
         <div v-if="aiEnabled" class="column-actions">
           <vscode-button @click="generateDocsForModel()"
