--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -1,191 +1,235 @@
 <!doctype html>
 <html lang="en">
-<!-- These are injected at HTML render time
+  <!-- These are injected at HTML render time
     __ROOT__            [path to resource directory]
     __THEME__           ["light" | "dark"]
     __NONCE__           [security]
     __CSPSOURCE__       [webview Content Secure Policy source]
  -->
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; font-src __CSPSOURCE__; img-src __CSPSOURCE__ https:; style-src __CSPSOURCE__ 'unsafe-inline'; script-src 'strict-dynamic' 'unsafe-eval' 'nonce-__NONCE__';" />
-  <title>Documentation Editor</title>
-  <!-- These are made available for main.js -->
-  <script nonce="__NONCE__" type="importmap">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; font-src __CSPSOURCE__; img-src __CSPSOURCE__ https:; style-src __CSPSOURCE__ 'unsafe-inline'; script-src 'strict-dynamic' 'unsafe-eval' 'nonce-__NONCE__';"
+    />
+    <title>Documentation Editor</title>
+    <!-- These are made available for main.js -->
+    <script nonce="__NONCE__" type="importmap">
       {
         "imports": {
           "vue": "__ROOT__/assets/vue.esm-browser.prod.js"
         }
       }
     </script>
-  <script nonce="__NONCE__" type="module" src="__ROOT__/assets/toolkit.min.js"></script>
-  <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/style.css" />
-  <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/codicon.css" />
-</head>
+    <script
+      nonce="__NONCE__"
+      type="module"
+      src="__ROOT__/assets/toolkit.min.js"
+    ></script>
+    <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/style.css" />
+    <link nonce="__NONCE__" rel="stylesheet" href="__ROOT__/codicon.css" />
+  </head>
 
-<body id="app">
-  <vscode-panels id="panel-manager" activeid="tab-3" aria-label="dbt Preview">
-    <vscode-panel-tab v-if="hasData">
-      Documentation for {{ name }}
-    </vscode-panel-tab>
+  <body id="app">
+    <vscode-panels id="panel-manager" activeid="tab-3" aria-label="dbt Preview">
+      <vscode-panel-tab v-if="hasData">
+        Documentation for {{ name }}
+      </vscode-panel-tab>
 
-    <vscode-panel-tab> Help </vscode-panel-tab>
+      <vscode-panel-tab> Help </vscode-panel-tab>
 
-    <vscode-panel-view v-if="hasData">
-      <section id="docs-form">
-        <vscode-text-area v-model="description" placeholder="Describe your model" resize="vertical" rows="5">
-          <h2>
-            Documentation for {{ name }} &nbsp;<vscode-tag v-show="generated && aiEnabled">AI generated</vscode-tag>
-          </h2>
-        </vscode-text-area>
-        <div v-if="aiEnabled" class="column-actions">
-          <vscode-button @click="generateDocsForModel()">Generate documentation<span slot="start"
-              class="codicon codicon-wand"></span></vscode-button>
-          <vscode-button appearance="secondary" v-show="generated" @click="toggleRating('model_rating')">Add comment
-            <span slot="start" class="codicon codicon-comment"></span>
-          </vscode-button>
-        </div>
-        <Comment :data="description" :ref="'model_rating'"></Comment>
-        <vscode-divider></vscode-divider>
-        <h2>Columns</h2>
-        <vscode-button @click="fetchMetadataFromDatabase()">Synchronize columns with database<span slot="start"
-            class="codicon codicon-sync"></span>
-        </vscode-button>
-        <p v-if="columns.length == 0">
-          No columns found in the dbt manifest for {{ name }}.
-        </p>
-        <section id="columns-form" v-for="column in columns">
-          <vscode-text-area v-model="column.description" :placeholder="'Describe ' + column.name" resize="vertical"
-            rows="5">
-            <h3>
-              {{ column.name }}<span v-if="column.type">&nbsp;({{ column.type }})</span>&nbsp;<vscode-tag
-                v-show="column.generated && aiEnabled">AI generated</vscode-tag>
-            </h3>
+      <vscode-panel-view v-if="hasData">
+        <section id="docs-form">
+          <vscode-text-area
+            v-model="description"
+            placeholder="Describe your model"
+            resize="vertical"
+            rows="5"
+          >
+            <h2>
+              Documentation for {{ name }} &nbsp;<vscode-tag
+                v-show="generated && aiEnabled"
+                >DataPilot</vscode-tag
+              >
+            </h2>
           </vscode-text-area>
           <div v-if="aiEnabled" class="column-actions">
-            <vscode-button @click="generateDocsForColumn(column.name)">Generate documentation<span slot="start"
-                class="codicon codicon-wand"></span>
-            </vscode-button>
-            <vscode-button appearance="secondary" v-show="column.generated"
-              @click="toggleRating('rating_' + column.name)">Add comment
+            <vscode-button @click="generateDocsForModel()"
+              >Generate documentation<span
+                slot="start"
+                class="codicon codicon-hubot"
+              ></span
+            ></vscode-button>
+            <vscode-button
+              appearance="secondary"
+              v-show="generated"
+              @click="toggleRating('model_rating')"
+              >Add comment
               <span slot="start" class="codicon codicon-comment"></span>
             </vscode-button>
           </div>
-          <Comment :data="column" :ref="'rating_' + column.name"></Comment>
-        </section>
-        <p v-if="patchPath">Documentation will be saved to {{ patchPath }}</p>
-
-        <div class="dropdown-container" v-if="!patchPath">
-          <label for="dialog-type">
-            <h3>Save documentation to</h3>
-          </label>
-          <vscode-dropdown id="dialog-type" v-model="dialogType">
-            <vscode-option>Existing file</vscode-option>
-            <vscode-option>New file</vscode-option>
-          </vscode-dropdown>
-        </div>
-        <vscode-button id="submit-button" @click="saveDocumentation()">Save documentation</vscode-button>
-      </section>
-    </vscode-panel-view>
-
-    <vscode-panel-view>
-      <div class="help-body">
-        <h2>dbt Model Documentation Help</h2>
-        <p>
-          Welcome to the dbt model documentation interface! Here you can
-          write, edit, and save comprehensive documentation for your dbt
-          models and their columns.
-        </p>
-
-        <h3>Actions You Can Take:</h3>
-        <ol>
-          <li>
-            <strong>Writing Documentation:</strong>
-            <ul>
-              <li>
-                Click inside any text area corresponding to the model or
-                individual columns.
-              </li>
-              <li>Start typing your documentation.</li>
-            </ul>
-          </li>
-          <li>
-            <strong>Saving Documentation:</strong>
-            <p>
-              Once you've added or edited the documentation for your model or
-              columns, hit the <strong>"Save Documentation"</strong> button to
-              save everything.
-            </p>
-          </li>
-          <li>
-            <strong>Sync Model with Database:</strong>
-            <ul>
-              <li>
-                Sometimes, the dbt models might not list all the rows or might
-                be out-of-date.
-              </li>
-              <li>
-                Use the sync action to synchronize the model with your
-                database and fetch the accurate columns and their types.
-              </li>
-              <li>
-                Note: If the model is saved after syncing, stale columns are
-                not removed.
-              </li>
-            </ul>
-          </li>
-        </ol>
-        <div v-show="aiEnabled">
-          <p>
-            <em>If AI is enabled</em>, you have some additional capabilities:
+          <Comment :data="description" :ref="'model_rating'"></Comment>
+          <vscode-divider></vscode-divider>
+          <h2>Columns</h2>
+          <vscode-button @click="fetchMetadataFromDatabase()"
+            >Synchronize columns with database<span
+              slot="start"
+              class="codicon codicon-sync"
+            ></span>
+          </vscode-button>
+          <p v-if="columns.length == 0">
+            No columns found in the dbt manifest for {{ name }}.
           </p>
-          <ol start="4">
+          <section id="columns-form" v-for="column in columns">
+            <vscode-text-area
+              v-model="column.description"
+              :placeholder="'Describe ' + column.name"
+              resize="vertical"
+              rows="5"
+            >
+              <h3>
+                {{ column.name }}<span v-if="column.type"
+                  >&nbsp;({{ column.type }})</span
+                >&nbsp;<vscode-tag v-show="column.generated && aiEnabled"
+                  >DataPilot</vscode-tag
+                >
+              </h3>
+            </vscode-text-area>
+            <div v-if="aiEnabled" class="column-actions">
+              <vscode-button @click="generateDocsForColumn(column.name)"
+                >Generate documentation<span
+                  slot="start"
+                  class="codicon codicon-hubot"
+                ></span>
+              </vscode-button>
+              <vscode-button
+                appearance="secondary"
+                v-show="column.generated"
+                @click="toggleRating('rating_' + column.name)"
+                >Add comment
+                <span slot="start" class="codicon codicon-comment"></span>
+              </vscode-button>
+            </div>
+            <Comment :data="column" :ref="'rating_' + column.name"></Comment>
+          </section>
+          <p v-if="patchPath">Documentation will be saved to {{ patchPath }}</p>
+
+          <div class="dropdown-container" v-if="!patchPath">
+            <label for="dialog-type">
+              <h3>Save documentation to</h3>
+            </label>
+            <vscode-dropdown id="dialog-type" v-model="dialogType">
+              <vscode-option>Existing file</vscode-option>
+              <vscode-option>New file</vscode-option>
+            </vscode-dropdown>
+          </div>
+          <vscode-button id="submit-button" @click="saveDocumentation()"
+            >Save documentation</vscode-button
+          >
+        </section>
+      </vscode-panel-view>
+
+      <vscode-panel-view>
+        <div class="help-body">
+          <h2>dbt Model Documentation Help</h2>
+          <p>
+            Welcome to the dbt model documentation interface! Here you can
+            write, edit, and save comprehensive documentation for your dbt
+            models and their columns.
+          </p>
+
+          <h3>Actions You Can Take:</h3>
+          <ol>
             <li>
-              <strong>Auto-generate Documentation:</strong>
+              <strong>Writing Documentation:</strong>
+              <ul>
+                <li>
+                  Click inside any text area corresponding to the model or
+                  individual columns.
+                </li>
+                <li>Start typing your documentation.</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Saving Documentation:</strong>
               <p>
-                Want a starting point or need some inspiration? Use the
-                <strong>"Generate Documentation"</strong> button to
-                auto-populate documentation for a model or its columns.
+                Once you've added or edited the documentation for your model or
+                columns, hit the <strong>"Save Documentation"</strong> button to
+                save everything.
               </p>
             </li>
             <li>
-              <strong>Leave Feedback on AI-Generated Documentation:</strong>
+              <strong>Sync Model with Database:</strong>
               <ul>
                 <li>
-                  Click on the <strong>"Add Comment"</strong> button after any
-                  AI-generated documentation.
+                  Sometimes, the dbt models might not list all the rows or might
+                  be out-of-date.
                 </li>
-                <li>This opens a text area where you can provide feedback.</li>
                 <li>
-                  Once done, use the thumbsup (👍) or thumbsdown (👎) icon to
-                  submit your feedback.
+                  Use the sync action to synchronize the model with your
+                  database and fetch the accurate columns and their types.
+                </li>
+                <li>
+                  Note: If the model is saved after syncing, stale columns are
+                  not removed.
                 </li>
               </ul>
             </li>
           </ol>
+          <div v-show="aiEnabled">
+            <p>
+              <em>If AI is enabled</em>, you have some additional capabilities:
+            </p>
+            <ol start="4">
+              <li>
+                <strong>Auto-generate Documentation:</strong>
+                <p>
+                  Want a starting point or need some inspiration? Use the
+                  <strong>"Generate Documentation"</strong> button to
+                  auto-populate documentation for a model or its columns.
+                </p>
+              </li>
+              <li>
+                <strong>Leave Feedback on AI-Generated Documentation:</strong>
+                <ul>
+                  <li>
+                    Click on the <strong>"Add Comment"</strong> button after any
+                    AI-generated documentation.
+                  </li>
+                  <li>
+                    This opens a text area where you can provide feedback.
+                  </li>
+                  <li>
+                    Once done, use the thumbsup (👍) or thumbsdown (👎) icon to
+                    submit your feedback.
+                  </li>
+                </ul>
+              </li>
+            </ol>
+          </div>
 
+          <h3>Help Us Improve:</h3>
+          <p>
+            We're eager to hear from you! If you've tried the AI-generated
+            documentation, let us know how it worked for you. Your feedback
+            helps us improve and ensures we offer a valuable tool for the
+            community.
+          </p>
+          <p>
+            For any issues or concerns, please reach out to the extension
+            maintainers or join our conversation at the dbt community
+            <a
+              href="https://getdbt.slack.com/archives/C05KPDGRMDW"
+              target="_blank"
+              >Slack channel</a
+            >.
+          </p>
+          <p>Happy documenting!</p>
         </div>
-
-        <h3>Help Us Improve:</h3>
-        <p>
-          We're eager to hear from you! If you've tried the AI-generated
-          documentation, let us know how it worked for you. Your feedback
-          helps us improve and ensures we offer a valuable tool for the
-          community.
-        </p>
-        <p>
-          For any issues or concerns, please reach out to the extension
-          maintainers or join our conversation at the dbt community
-          <a href="https://getdbt.slack.com/archives/C05KPDGRMDW" target="_blank">Slack channel</a>.
-        </p>
-        <p>Happy documenting!</p>
-      </div>
-    </vscode-panel-view>
-  </vscode-panels>
-  <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
-</body>
-
+      </vscode-panel-view>
+    </vscode-panels>
+    <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
+  </body>
 </html>
