--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -43,7 +43,7 @@
       <vscode-panel-view v-if="hasData">
         <section id="docs-form">
           <vscode-text-area
-            v-model="description"
+            v-model="docs.description"
             placeholder="Describe your model"
             resize="vertical"
             rows="5"
@@ -70,7 +70,7 @@
               <span slot="start" class="codicon codicon-comment"></span>
             </vscode-button>
           </div>
-          <Comment :data="description" :ref="'model_rating'"></Comment>
+          <Comment :data="docs.description" :ref="'model_rating'"></Comment>
           <vscode-divider></vscode-divider>
           <h2>Columns</h2>
           <vscode-button @click="fetchMetadataFromDatabase()"
@@ -79,10 +79,10 @@
               class="codicon codicon-sync"
             ></span>
           </vscode-button>
-          <p v-if="columns.length == 0">
+          <p v-if="docs?.columns.length == 0">
             No columns found in the dbt manifest for {{ name }}.
           </p>
-          <section id="columns-form" v-for="column in columns">
+          <section id="columns-form" v-for="column in docs.columns">
             <vscode-text-area
               v-model="column.description"
               :placeholder="'Describe ' + column.name"
