Change generate label

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -57,7 +57,7 @@
           </vscode-text-area>
           <div v-if="aiEnabled" class="column-actions">
             <vscode-button @click="generateDocsForModel()"
-              >Generate documentation<span
+              >Generate Documentation<span
                 slot="start"
                 class="codicon codicon-hubot"
               ></span
@@ -99,7 +99,7 @@
             </vscode-text-area>
             <div v-if="aiEnabled" class="column-actions">
               <vscode-button @click="generateDocsForColumn(column.name)"
-                >Generate documentation<span
+                >Generate Documentation<span
                   slot="start"
                   class="codicon codicon-hubot"
                 ></span>
