Adapt to dropdown

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -46,9 +46,9 @@
             :ai-enabled="aiEnabled"
             :generated="generated"
             :title="'Documentation for ' + name"
-            :documentation="docs.description"
+            v-model="docs.description"
             placeholder="Describe your model"
-            @generate-docs="generateDocsForModel()"
+            @generate-docs="generateDocsForModel($event)"
             comment-ref="model_rating"
             :prompt-options="[[{key: 'short', value: 'Make it shorter'}, {key: 'long', value: 'Make it longer'}]]"
           ></Documentation>
@@ -68,10 +68,9 @@
               :ai-enabled="aiEnabled"
               :generated="column.generated"
               :title="column.name + (column.type ? '&nbsp;(' + column.type + ')' : '')"
-              :documentation="column.description"
+              v-model="column.description"
               :placeholder="'Describe ' + column.name"
-              @generate-docs="generateDocsForColumn(column.name)"
-              @enhance-docs="enhanceDocsForColumn(column.name)"
+              @generate-docs="generateDocsForColumn(column.name, $event)"
               :comment-ref="'rating_' + column.name"
               :prompt-options="[[{key: 'short', value: 'Make it shorter'}, {key: 'long', value: 'Make it longer'}]]"
             ></Documentation>
