--- a/new_lineage_panel/index.html
+++ b/new_lineage_panel/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="sidebar"></div>
     <script nonce="__NONCE__" type="module" src="/src/main.tsx"></script>
   </body>
 </html>
