feat: added switching logic

--- a/lineage_panel/index.html
+++ b/lineage_panel/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="panel-tabs-container">
       <div class="panel-tab-selected">Legacy Panel</div>
-      <div class="panel-tab">New Panel(Beta)</div>
+      <div class="panel-tab" id="new-panel-button">New Panel(Beta)</div>
     </div>
     <div id="container"></div>
     <script src="__ROOT__/assets/g6.min.js"></script>
