fix: review comments and added padding between buttons

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -87,7 +87,7 @@
             <vscode-button @click="copyResultsToClipboard"
               >Copy Results</vscode-button
             >
-            <vscode-button @click="downloadAsCSV"
+            <vscode-button @click="downloadAsCSV" style="margin-left: 5px"
               >Download as CSV</vscode-button
             >
             <div id="query-results" :style="getTableStyles()"></div>
