fix: added bottom padding

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -84,10 +84,14 @@
           />
 
           <div v-show="hasData">
-            <vscode-button @click="copyResultsToClipboard"
+            <vscode-button
+              @click="copyResultsToClipboard"
+              style="margin-bottom: 4px"
               >Copy Results</vscode-button
             >
-            <vscode-button @click="downloadAsCSV" style="margin-left: 5px"
+            <vscode-button
+              @click="downloadAsCSV"
+              style="margin-left: 5px; margin-bottom: 4px"
               >Download as CSV</vscode-button
             >
             <div id="query-results" :style="getTableStyles()"></div>
