--- a/lineage_panel/index.html
+++ b/lineage_panel/index.html
@@ -18,8 +18,8 @@
 
   <body>
     <div class="panel-tabs-container">
-      <div class="panel-tab-selected">Legacy Panel</div>
-      <div class="panel-tab" id="new-panel-button">New Panel(Beta)</div>
+      <div class="panel-tab-selected">Legacy UX</div>
+      <div class="panel-tab" id="new-panel-button">New UX (Beta)</div>
     </div>
     <div id="container"></div>
     <script src="__ROOT__/assets/g6.min.js"></script>
