fix: showing only buttons

--- a/lineage_panel/index.html
+++ b/lineage_panel/index.html
@@ -17,9 +17,8 @@
   </head>
 
   <body>
-    <div class="panel-tabs-container">
-      <div class="panel-tab-selected">Legacy UX</div>
-      <div class="panel-tab" id="new-panel-button">New UX (Beta)</div>
+    <div class="top-right-container">
+      <div class="btn" id="new-panel-button">Show New UX (Beta)</div>
     </div>
     <div id="container"></div>
     <script src="__ROOT__/assets/g6.min.js"></script>
