feat: new lineage panel (#581)

--- a/lineage_panel/index.html
+++ b/lineage_panel/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <!-- These are injected at HTML render time
     __ROOT__            [path to resource directory]
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <div class="top-right-container">
+      <div class="btn" id="new-panel-button">Show New UX (Beta)</div>
+    </div>
     <div id="container"></div>
     <script src="__ROOT__/assets/g6.min.js"></script>
     <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
